myteo/test/parser/ast/type/single_element_tuple_trailing_comma_error.myte
module test

type alias t = (int,)